# comp-paralela

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: macros.h  master.h  master_slave.h  sequential_Erastotenes.h  simple_buffers.h  slave.h
results/: analysis_debug_build.txt  analysis_release_build.txt  perf_output_debug.txt  perf_output_release.txt
src/: main.c  main_parallel.c  master.c  master_slave.c  sequential_Erastotenes.c  simple_buffers.c  slave.c
